// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test input clear 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon"><i class="var-icon var-icon--set var-icon-close-circle var-field-decorator__clear-icon" style="transition-duration: 0ms;" var-field-decorator-cover=""></i></div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input component slots > test input append-icon slot 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->append-icon
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input component slots > test input clear-icon slot 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">clear-icon</div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input component slots > test input prepend-icon slot 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon">prepend-icon</div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events > test input focus & blur 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller var-field-decorator--focus" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot var-field-decorator--line-focus"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events > test input focus & blur 2`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events > test input focus & blur 3`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller var-field-decorator--focus" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><textarea class="var-input__input var-input--textarea" autocomplete="new-password" id="var-input-mock-id" type="text" rows="8" style="resize: none;"></textarea>
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot var-field-decorator--line-focus"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events > test input focus & blur 4`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><textarea class="var-input__input var-input--textarea" autocomplete="new-password" id="var-input-mock-id" type="text" rows="8" style="resize: none;"></textarea>
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input hint to be false 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon var-field-decorator--icon-non-hint"></div>
      <div class="var-field-decorator__middle var-field-decorator--middle-non-hint">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text" style="--input-placeholder-color: var(--field-decorator-placeholder-color, var(--field-decorator-blur-color));">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon var-field-decorator--icon-non-hint">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input maxlength 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text" maxlength="100">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>4/100</div>
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test input size 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard var-field-decorator--small">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input type 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input type 2`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle"><input tabindex="-1" class="var-input__autocomplete"><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="password"></div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input type 3`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text" inputmode="numeric">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input type 4`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="tel">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input type 5`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="email">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input validation 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller var-field-decorator--error" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input var-input--error var-input--caret-error" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line var-field-decorator--line-error">
      <div class="var-field-decorator__dot var-field-decorator--line-error"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>长度必须大于3</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test input validation 2`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input validation 3`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input variant 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input variant 2`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--outlined">
    <div class="var-field-decorator__controller" style="cursor: text; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__middle">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text">
      </div>
      <!--v-if-->
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <fieldset class="var-field-decorator__line">
      <legend class="var-field-decorator__line-legend var-field-decorator__line-legend--hint">
        <!--v-if-->
      </legend>
    </fieldset>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;
